<resources>
    <string name="app_name">Running Buddies</string>
    <string name="login">Login</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="register">Register</string>
    <string name="button_to_register">Button to register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="click_to_log_in">Click to log in</string>
    <string name="log_out">Log out</string>
    <string name="click_here_to_log_in">Click here to Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="user_information">User Information</string>
    <string name="select_your_gender">Select your gender: </string>
    <string name="submit_user_information">Submit User Information</string>
    <string name="evening_from_6_p_m_to_midnight">Evening (From 6 p.m to midnight)</string>
    <string name="afternoon_from_12_a_m_to_6_p_m">Afternoon (From 12 a.m to 6 p.m)</string>
    <string name="morning_between_6_a_m_and_12_a_m">Morning (Between 6 a.m and 12 a.m)</string>
    <string name="what_time_do_you_like_to_run">What time do you like to run ?:</string>
    <string name="what_is_your_maximum_speed">What is your maximum speed ?</string>
    <string name="what_is_your_minimum_speed">What is your minimum speed?</string>
    <string name="user_email">User email</string>
    <string name="running_buddies_needs_permission_to_access_device_location_to_provide_required_services_please_allow_the_permission">Running Buddies needs permission to access device location to provide required services. Please allow the permission.</string>
    <string name="image_de_l_application">Image de l\'application</string>
    <string name="permission_request">Permission Request</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="go_to_map">Go to map</string>
    <string name="search_runners">Search runners</string>
    <string name="option_get_place">option get place</string>
    <string name="record_a_run">Record a run</string>
    <string name="default_user_name">John Doe</string>
    <string name="user_name_label">User name: </string>
    <string name="age_label">Age: </string>
    <string name="default_age">50</string>
    <string name="minimum_speed_label">Minimum speed: </string>
    <string name="default_min_speed">6 km/h</string>
    <string name="maximum_speed_label">Maximum speed: </string>
    <string name="default_max_speed">22 km/h</string>
    <string name="time_preference_label">Time preference: </string>
    <string name="default_time_preference">Afternoon</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="user_email_label">User email:</string>
    <string name="default_user_email">johndoe@example.com</string>
    <string name="save_label">Save</string>
    <string name="settings_label">Settings</string>
</resources>