<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".controllers.ProfileActivity">

    <TextView
        android:text="@string/user_information"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/firstName"
            android:hint="@string/first_name"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:inputType="text" />
        <EditText
            android:id="@+id/lastName"
            android:hint="@string/last_name"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:inputType="number"
            android:hint="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button for adding your course to Firebase-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_gender"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_gender_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_gender_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e0e0e0"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_time_do_you_like_to_run"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radio_group_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_run_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning_between_6_a_m_and_12_a_m" />

            <RadioButton
                android:id="@+id/radio_run_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afternoon_from_12_a_m_to_6_p_m" />
            <RadioButton
                android:id="@+id/radio_run_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening_from_6_p_m_to_midnight" />
        </RadioGroup>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_minimum_speed"
        android:textColor="#000"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Spinner
        android:id = "@+id/spinner"
        android:minHeight="48dp"
        android:layout_gravity="left"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:prompt="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_maximum_speed"
        android:textColor="#000"
        android:layout_gravity="left"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Spinner
        android:id = "@+id/spinner2"
        android:minHeight="48dp"
        android:layout_gravity="left"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:prompt="@string/app_name"
        />

    <Button
        android:id="@+id/idBtnSubmitCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit_user_information"
        android:textAllCaps="false" />

</LinearLayout>

